Reduce html when using extends

--- a/test/extends.mjml
+++ b/test/extends.mjml
@@ -1,10 +1,15 @@
-<django-extends template="test-template.html">
-    <django-block name="overriding-block">
-        <mj-text>Sample text</mj-text>
-        <mj-section>
-            <mj-column>
-                <mj-text>Random!</mj-text>
-            </mj-column>
-        </mj-section>
-    </django-block>
-</django-extends>
+<mjml>
+    <mj-body>
+        <django-extends template="test-template.html">
+            <django-block name="overriding-block">
+                <mj-text>Sample text</mj-text>
+                <mj-section>
+                    <mj-column>
+                        <mj-text>Random!</mj-text>
+                    </mj-column>
+                </mj-section>
+            </django-block>
+        </django-extends>
+    </mj-body>
+</mjml>
+
